fixed logic & controllers